# fast_eda

./: README.md  eda.py  features.py  pyproject.toml
data/: v1.csv
src/: eda.py  features.py
